--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
+<!-- index.html at the project root -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>My Site</title>
+    <title>Andrew Yansick</title>
+    <link rel="icon" type="image/x-icon" href="/assets/favicon.png" />
   </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
